--- a/index.html
+++ b/index.html
@@ -6,10 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Speak</title>
+    <style>
+        textarea {
+            width: 80%;
+            display: block;
+            margin: 1rem auto;
+            border-radius: 0.35rem;
+            border-color: brown;
+            height: 10vh;
+            background-color: cornsilk;
+            padding: 1rem 1rem;
+        }
+
+        #output-Mssg{
+            font-size: larger;
+            padding-top: 1rem;
+        }
+
+        #txt-Output{
+            border: 1px solid black;
+            border-radius: 00.35rem;
+            height: 10vh;
+            width: 80%;
+            margin: 1rem auto;
+            background-color: rgb(157, 248, 19);
+            border-color: rgb(15, 59, 2);
+            padding: 1rem 1rem;
+            /* text-align: center; */
+        }
+    </style>
+
 </head>
 
 <body>
-    <script>console.log("Script i s working")</script>
+    <h1>Translator</h1>
+    <textarea id="txt-Input" placeholder="Enter the text you want to translate..."></textarea>
+    <button id="btn-translate">Translate</button>
+
+    <div id="output-Mssg">Output will come here 👇 </div>
+    <div id="txt-Output"></div>
+    <script src="app.js" type="text/javascript"></script>
+
 </body>
 
 </html>
