--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet" />
     <title>Banana Speak</title>
     <style>
         textarea {
@@ -14,23 +15,25 @@
             border-radius: 0.35rem;
             border-color: brown;
             height: 10vh;
-            background-color: cornsilk;
+            background-color: #fde613e0;
             padding: 1rem 1rem;
         }
 
-        #output-Mssg{
+        #output-Mssg {
             font-size: larger;
-            padding-top: 1rem;
+            padding-top: 3.5rem;
+            margin: 1rem;
+            margin-bottom: 3.5rem;
         }
 
-        #txt-Output{
+        #txt-Output {
             border: 1px solid black;
             border-radius: 00.35rem;
             height: 10vh;
             width: 80%;
             margin: 1rem auto;
-            background-color: rgb(157, 248, 19);
-            border-color: rgb(15, 59, 2);
+            background-color: cornsilk ;
+            border-color: brown;
             padding: 1rem 1rem;
             /* text-align: center; */
         }
@@ -39,13 +42,38 @@
 </head>
 
 <body>
-    <h1>Translator</h1>
+    <header class="hero">
+        <h1 class="hero-heading">Translator</h1>
+
+    </header>
     <textarea id="txt-Input" placeholder="Enter the text you want to translate..."></textarea>
-    <button id="btn-translate">Translate</button>
+
+
+    <div class="center">
+        <button id="btn-translate">Translate</button>
+
+    </div>
+
 
     <div id="output-Mssg">Output will come here 👇 </div>
-    <div id="txt-Output"></div>
+    <div id="txt-Output">This will convert your text into Minions language</div>
     <script src="app.js" type="text/javascript"></script>
+
+    <footer class="footer">
+        <div class="footer-header">Connect with me socially</div>
+        <ul class="social-links">
+            <li class="list-item-inline"><a class="link" href="https://www.instagram.com/murtaza_neher_wala/?utm_medium=copy_link">instagram</a></li>
+
+            <li class="list-item-inline"><a class="link" href="https://twitter.com/Murtaza_neher?t=KjQ1giMXozsd4enZDMxNYg&s=03">twitter</a></li>
+
+            <li class="list-item-inline"><a class="link" href="https://github.com/MurtazaNeher">github</a></li>
+
+            <li class="list-item-inline"><a class="link" href="https://api.whatsapp.com/send?phone=7987550997&text=Hello%20Murtaza">whatsapp</a></li>
+
+
+        </ul>
+    </footer>
+
 
 </body>
 
