--- a/index.html
+++ b/index.html
@@ -9,31 +9,33 @@
     <title>Banana Speak</title>
     <style>
         textarea {
-            width: 80%;
+            width: 90%;
             display: block;
             margin: 1rem auto;
             border-radius: 0.35rem;
             border-color: brown;
             height: 10vh;
-            background-color: #fde613e0;
+            background-color: wheat;
             padding: 1rem 1rem;
         }
 
         #output-Mssg {
+            color: white;
             font-size: larger;
             padding-top: 3.5rem;
             margin: 1rem;
-            margin-bottom: 3.5rem;
+            margin-bottom: 1.7rem;
+            text-align: center;
         }
 
         #txt-Output {
             border: 1px solid black;
             border-radius: 00.35rem;
             height: 10vh;
-            width: 80%;
+            width: 90%;
             margin: 1rem auto;
             background-color: cornsilk ;
-            border-color: brown;
+            border-color: greenyellow;
             padding: 1rem 1rem;
             /* text-align: center; */
         }
@@ -43,24 +45,35 @@
 
 <body>
     <header class="hero">
-        <h1 class="hero-heading">Translator</h1>
+        <!-- <h1 class="hero-heading">Translator</h1> -->
+      <div style="text-align: center;">
+        <img class="hero-img2" src="images/m2.png" />
+        <img class="hero-img" src="images/m1.png" />
+        <img class="hero-img2" src="images/m2.png" />
+    </div>
+        <h3 style="text-align: center; color: white;">This will convert your text into Minions language</h3>
 
     </header>
     <textarea id="txt-Input" placeholder="Enter the text you want to translate..."></textarea>
 
 
-    <div class="center">
+    <div style="text-align: center;">
         <button id="btn-translate">Translate</button>
 
     </div>
 
 
     <div id="output-Mssg">Output will come here 👇 </div>
-    <div id="txt-Output">This will convert your text into Minions language</div>
+    <div id="txt-Output"></div>
     <script src="app.js" type="text/javascript"></script>
 
     <footer class="footer">
-        <div class="footer-header">Connect with me socially</div>
+        <div style="font-weight: italic;
+        font-size: larger;
+    text-align: left;">Dev : Murtaza Neher Wala</div>
+        <div style="font-weight: bold;
+        font-size: larger;">Connect with me socially</div>
+
         <ul class="social-links">
             <li class="list-item-inline"><a class="link" href="https://www.instagram.com/murtaza_neher_wala/?utm_medium=copy_link">instagram</a></li>
 
