--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet" />
-    <title>Banana Speak</title>
+    <title>Translation Tool</title>
     <style>
         textarea {
             width: 90%;
@@ -22,7 +22,7 @@
         #output-Mssg {
             color: white;
             font-size: larger;
-            padding-top: 3.5rem;
+            padding-top: 0.5rem;
             margin: 1rem;
             margin-bottom: 1.7rem;
             text-align: center;
@@ -44,9 +44,10 @@
 </head>
 
 <body>
+    
     <header class="hero">
         <!-- <h1 class="hero-heading">Translator</h1> -->
-      <div style="text-align: center;">
+      <div style="text-align: center; max-width: 100%;">
         <img class="hero-img2" src="images/m2.png" />
         <img class="hero-img" src="images/m1.png" />
         <img class="hero-img2" src="images/m2.png" />
