--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
     <div style="text-align: center;">
-        <button id="btn-translate">Translate</button>
+        <button id="btn-Translate">Translate</button>
 
     </div>
 
@@ -69,25 +69,97 @@
     <script src="app.js" type="text/javascript"></script>
 
     <footer class="footer">
-        <div style="font-weight: italic;
-        font-size: larger;
-    text-align: left;">Dev : Murtaza Neher Wala</div>
-        <div style="font-weight: bold;
-        font-size: larger;">Connect with me socially</div>
-
+        <div class="footer-header">Connect with me socially</div>
         <ul class="social-links">
-            <li class="list-item-inline"><a class="link" href="https://www.instagram.com/murtaza_neher_wala/?utm_medium=copy_link">instagram</a></li>
-
-            <li class="list-item-inline"><a class="link" href="https://twitter.com/Murtaza_neher?t=KjQ1giMXozsd4enZDMxNYg&s=03">twitter</a></li>
-
-            <li class="list-item-inline"><a class="link" href="https://github.com/MurtazaNeher">github</a></li>
-
-            <li class="list-item-inline"><a class="link" href="https://api.whatsapp.com/send?phone=7987550997&text=Hello%20Murtaza">whatsapp</a></li>
-
-
+          <li class="list-item-inline">
+  
+            <button class="btn-S"
+              onclick="window.location.href='https://www.instagram.com/murtaza_neher_wala/?utm_medium=copy_link'">
+              <div class="svg-wrapper-1">
+                <div class="svg-wrapper">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                    <path fill="none" d="M0 0h24v24H0z"></path>
+                    <path fill="currentColor"
+                      d="M1.946 9.315c-.522-.174-.527-.455.01-.634l19.087-6.362c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8-8 6-8.054-2.685z">
+                    </path>
+                  </svg>
+                </div>
+              </div>
+              <span>Instagram</span>
+            </button>
+  
+          </li>
+  
+          <li class="list-item-inline">
+  
+  
+            <button class="btn-S"
+              onclick="window.location.href='https://twitter.com/Murtaza_neher?t=KjQ1giMXozsd4enZDMxNYg&s=03'">
+              <div class="svg-wrapper-1">
+                <div class="svg-wrapper">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                    <path fill="none" d="M0 0h24v24H0z"></path>
+                    <path fill="currentColor"
+                      d="M1.946 9.315c-.522-.174-.527-.455.01-.634l19.087-6.362c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8-8 6-8.054-2.685z">
+                    </path>
+                  </svg>
+                </div>
+              </div>
+              <span>Twitter</span>
+            </button>
+  
+          </li>
+  
+  
+  
+          <li class="list-item-inline">
+  
+            <button class="btn-S" onclick="window.location.href='https://github.com/MurtazaNeher'">
+              <div class="svg-wrapper-1">
+                <div class="svg-wrapper">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                    <path fill="none" d="M0 0h24v24H0z"></path>
+                    <path fill="currentColor"
+                      d="M1.946 9.315c-.522-.174-.527-.455.01-.634l19.087-6.362c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8-8 6-8.054-2.685z">
+                    </path>
+                  </svg>
+                </div>
+              </div>
+              <span>Github</span>
+            </button>
+  
+  
+          </li>
+  
         </ul>
-    </footer>
-
+  
+        <p style="margin-bottom: 1rem;"></p>
+  
+  
+        <ul class="social-links">
+  
+          <li class="list-item-inline">
+  
+            <button class="btn-S"
+              onclick="window.location.href='https://api.whatsapp.com/send?phone=7987550997&text=Hello%20Murtaza'">
+              <div class="svg-wrapper-1">
+                <div class="svg-wrapper">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                    <path fill="none" d="M0 0h24v24H0z"></path>
+                    <path fill="currentColor"
+                      d="M1.946 9.315c-.522-.174-.527-.455.01-.634l19.087-6.362c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8-8 6-8.054-2.685z">
+                    </path>
+                  </svg>
+                </div>
+              </div>
+              <span>Whatsapp</span>
+            </button>
+          </li>
+  
+        </ul>
+  
+      </footer>
+  
 
 </body>
 
