--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 </head>
 
 <body>
-    
+    <nav></nav>
     <header class="hero">
         <!-- <h1 class="hero-heading">Translator</h1> -->
-      <div style="text-align: center; max-width: 800%;">
+      <div  style="text-align: center; max-width: 800%;  ">
         <img class="hero-img2" src="images/m2.png" />
         <img class="hero-img" src="images/m1.png" />
         <img class="hero-img2" src="images/m2.png" />
@@ -68,7 +68,9 @@
     <div id="txt-Output"></div>
     <script src="app.js" type="text/javascript"></script>
 
-    <footer class="footer">
+    <footer class="footer" style="background-color: #FBCA1F;">
+      <div style="margin-bottom: 0.5rem; text-align: left; margin-left: 0.4rem;">DEV : Murtaza Neher Wala</div>
+
         <div class="footer-header">Connect with me socially</div>
         <ul class="social-links">
           <li class="list-item-inline">
