Fix padding of footer Socail-media Links

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
       <div class="footer-header" style="color: white;" >Connect with me socially</div>
       <ul class="social-links" >
-          <li class="list-item-inline" style="margin-left: 0.5rem; margin-right: 0.5rem;">
+          <li class="list-item-inline" style="margin-left: 0.4rem; margin-right: 0.4rem;">
 
               <!-- 
               <a class="link"
@@ -89,7 +89,7 @@
 
           </li>
 
-          <li class="list-item-inline" style="margin-right: 0.5rem; margin-left: 0.5rem;">
+          <li class="list-item-inline" style="margin-right: 0.4rem; margin-left: 0.4;">
 
 
               <button class="btn-S"
@@ -103,7 +103,7 @@
 
 
 
-          <li class="list-item-inline" style="margin-right: 0.5rem; margin-left: 0.5rem;"> 
+          <li class="list-item-inline" style="margin-right: 0.4rem; margin-left: 0.4rem;"> 
 
               <button class="btn-S" onclick="window.location.href='https://github.com/MurtazaNeher'">
 
@@ -114,7 +114,7 @@
 
           </li>
 
-          <li class="list-item-inline" style="margin-right: 0.5rem; margin-left: 0.5rem;">
+          <li class="list-item-inline" style="margin-right: 0.4rem; margin-left: 0.4rem;">
 
               <button class="btn-S"
                   onclick="window.location.href='https://api.whatsapp.com/send?phone=7987550997&text=Hello%20Murtaza'">
