--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 
     <footer class="footer" >
 
-
-      <div class="footer-header" style="color: white;" >Connect with me socially</div>
+<div style="color: white; padding-left: 0.5rem; margin-top: 0.4rem; text-align:start;font-size: 14px;"><span style="color: #facc15;">DEV :</span> Murtaza Neher Wala</div>
+      <div class="footer-header" style="color: white;margin-top: 0.5rem;" >Connect with me socially</div>
       <ul class="social-links" >
           <li class="list-item-inline" style="margin-left: 0.4rem; margin-right: 0.4rem;">
 
